# Homework_Agentic_AI_Course

./: main.py  pyproject.toml
Homework1/: Homework1.ipynb
Homework1/.ipynb_checkpoints/: Homework1-checkpoint.ipynb
Homework1/books_text/: thinkcomplexity2.md  thinkjava2.md  thinkos.md
